# docker_utilities

./: .gitignore
Eratosthenes/: Dockerfile  SConstruct  run.sh
Eratosthenes/include/: eratosthenes.hpp
Eratosthenes/src/: eratosthenes.cpp  main.cpp
Eratosthenes/test/: test_eratosthenes.cpp
GoogleTests/: Dockerfile  Makefile  README.txt  run.sh  swap.hpp
GoogleTests/test/: CMakeLists.txt  test_swap.cpp
Qt++/: .gitignore  Dockerfile  README.txt  manage.sh  project.pro
pyzmq/: Dockerfile  README.txt  client.py  configuration.py  run.sh  server.py
